[gd_scene load_steps=5 format=1]

[ext_resource path="res://screens/play/map/rooms/room.gd" type="Script" id=1]
[ext_resource path="res://screens/play/map/rooms/room.png" type="Texture" id=2]
[ext_resource path="res://screens/play/map/rooms/wall.png" type="Texture" id=3]
[ext_resource path="res://screens/play/map/rooms/door.png" type="Texture" id=4]

[node name="room" type="Node2D"]

script/script = ExtResource( 1 )

[node name="room_bg" type="Sprite" parent="."]

texture = ExtResource( 2 )
modulate = Color( 0.655725, 0.675804, 0.699451, 1 )

[node name="wall_right" type="Sprite" parent="room_bg"]

visibility/visible = false
texture = ExtResource( 3 )

[node name="wall_left" type="Sprite" parent="room_bg"]

visibility/visible = false
texture = ExtResource( 3 )
flip_h = true

[node name="wall_top" type="Sprite" parent="room_bg"]

visibility/visible = false
transform/rot = 90.0
texture = ExtResource( 3 )

[node name="wall_bottom" type="Sprite" parent="room_bg"]

visibility/visible = false
transform/rot = 90.0
texture = ExtResource( 3 )
flip_h = true

[node name="door_right" type="Sprite" parent="room_bg"]

visibility/visible = false
texture = ExtResource( 4 )

[node name="door_left" type="Sprite" parent="room_bg"]

visibility/visible = false
texture = ExtResource( 4 )
flip_h = true

[node name="door_top" type="Sprite" parent="room_bg"]

visibility/visible = false
transform/rot = 90.0
texture = ExtResource( 4 )

[node name="door_bottom" type="Sprite" parent="room_bg"]

visibility/visible = false
transform/rot = 90.0
texture = ExtResource( 4 )
flip_h = true


